added code to html title page

--- a/projectprepsite/calendars/templates/calendars/titlepage.html
+++ b/projectprepsite/calendars/templates/calendars/titlepage.html
@@ -1,5 +1,57 @@
-<h1>
-  {text-align: center}
-  { font: bold 52pt Helvetica, sans-serif }
-  Project Prep
-</h1>
+<style>
+  header {
+    background-color: #dce8ff;
+    padding: 15px;
+    text-align: center;
+    font-size: 52;
+    color: dodgerblue;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 900;
+  }
+
+  section {
+    background-color: #dce8ff;
+    padding: 10px;
+    text-align: center;
+    font-size: 24;
+    color: dodgerblue;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+  article {
+    background-color: #dce8ff;
+    padding: 10px;
+    text-align: center;
+    font-size: 24;
+    color: dodgerblue;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+  .button {
+    border: none;
+    color: #4285f4;
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 24px;
+    margin: 4px 2px;
+    cursor: pointer;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+  .button {background-color: #a4c2f4ff;}
+</style>
+
+<header>
+  <h1 style="border: 3px solid #1c4587; padding: 20px;">
+    Project Prep
+  </h1>
+</header>
+
+<section>
+  <h2>Welcome to Project Prep!</h2> 
+</section>
+<article>
+  <p>On this website, you can create a teacher supervision schedule based on the information you enter.</p>
+  <p>Click <b>"Start"</b> to begin the process.</p>
+  <button class="button button1" onclick="alert('Hello')">START</button>
+</article>
+
+
