added upload page and button

--- a/projectprepsite/calendars/templates/calendars/uploadfile.html
+++ b/projectprepsite/calendars/templates/calendars/uploadfile.html
@@ -43,5 +43,5 @@
 
 <section>
     <h2><b>Add a <u>CSV file</u> which includes the names of all teachers, corresponding prep times, and school locations to supervise</b></h2>
-    <button class="button button1" onclick="window.location.href='titlepage';">UPLOAD</button> 
+    <button class="button button1" onclick="window.location='http://127.0.0.1:8000/calendars/upload'">UPLOAD</button> 
 </section>
