--- a/projectprepsite/calendars/templates/calendars/upload.html
+++ b/projectprepsite/calendars/templates/calendars/upload.html
@@ -1,4 +1,4 @@
-<form action="{% url "myapp:upload_csv" %}" method="POST" enctype="multipart/form-data" class="form-horizontal"> 
+<form action="{% url "calendars:upload" %}" method="POST" enctype="multipart/form-data" class="form-horizontal"> 
 {% csrf_token %}
 <div class="form-group">
     <label for="name" class="col-md-3 col-sm-3 col-xs-12 control-label">File: </label>
