edited display of pages

--- a/projectprepsite/calendars/templates/calendars/uploadsuccess.html
+++ b/projectprepsite/calendars/templates/calendars/uploadsuccess.html
@@ -17,20 +17,38 @@
     color: dodgerblue;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
-
+  article {
+    background-color: #dce8ff;
+    padding: 10px;
+    text-align: center;
+    font-size: 24;
+    color: dodgerblue;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
   .button {
     border: none;
-    color: #4285f4;
+    color: #a4c2f4;
     padding: 15px 32px;
     text-align: center;
     display: inline-block;
     font-size: 24px;
     margin: 4px 2px;
-    cursor: pointer;
+    transition-duration: 0.4s;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    border-radius: 5px;
+  }
+  .button2 {
+    border: none;
+    color: #a4c2f4;
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 24px;
+    margin: 4px 2px;
     transition-duration: 0.4s;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
-  .button {background-color: #d6e2f7; border:2px solid #1c4587}
+  .button {background-color: #c9daf8ff; border:2px solid #6d9eeb}
 
 </style>
 
@@ -44,3 +62,6 @@
     <h2><b>Add a <u>CSV file</u> which includes the names of all teachers, corresponding prep times, and school locations to supervise</b></h2>
     <button class="button button1" disabled>UPLOAD</button> 
 </section>
+<article>
+  <p>Your file has been successfully uploaded!</p>
+</article>
