--- a/projectprepsite/calendars/templates/calendars/upload.html
+++ b/projectprepsite/calendars/templates/calendars/upload.html
@@ -1,14 +1,74 @@
-<form action="{% url "calendars:upload" %}" method="POST" enctype="multipart/form-data" class="form-horizontal"> 
-{% csrf_token %}
-<div class="form-group">
-    <label for="name" class="col-md-3 col-sm-3 col-xs-12 control-label">File: </label>
-    <div class="col-md-8">
-        <input type="file" name="csv_file" id="csv_file" required="True" class="form-control">
-    </div>                    
-</div>
-<div class="form-group">                    
-    <div class="col-md-3 col-sm-3 col-xs-12 col-md-offset-3" style="margin-bottom:10px;">
-            <button class="btn btn-primary" onclick="window.location='http://127.0.0.1:8000/calendars/uploadsuccess'"> <span class="glyphicon glyphicon-upload" style="margin-right:5px;"></span>Upload </button>
-    </div> 
-</div>
+<style>
+    header {
+        background-color: #dce8ff;
+        padding: 15px;
+        text-align: center;
+        font-size: 52;
+        color: dodgerblue;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: 900;
+    }
+    input[type="file"] {
+        position: absolute;
+        z-index: -1;
+        top: 10px;
+        left: 8px;
+        font-size: 17px;
+        color: #b8b8b8;
+    }
+    .wrapper {
+        background-color: #dce8ff;
+        padding: 15px;
+        text-align: center;
+    }
+    .button {
+        display: inline-block;
+        border: 2px solid #1c4587;
+        color: #4285f4;
+        padding: 15px 32px; 
+        text-align: center;
+        font-size: 24px;
+        transition-duration: 0.4s;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        cursor: pointer;
+        background-color: #a4c2f4ff;
+        border-radius: 5px;
+    }
+    .button:hover {background-color: rgb(214, 226, 247)}
+    .button-wrap {
+        position: relative;
+    }
+</style>
+
+
+<!--<form action="{% url "calendars:upload" %}" method="POST" enctype="multipart/form-data" class="form-horizontal"> 
+    {% csrf_token %}
+    <div class="form-group">
+        <label for="name" class="col-md-3 col-sm-3 col-xs-12 control-label">File: </label>
+        <div class="col-md-8">
+            <input type="file" name="csv_file" id="csv_file" required="True" class="form-control">
+        </div>                    
+    </div>
+    <div class="form-group">                    
+        <div class="col-md-3 col-sm-3 col-xs-12 col-md-offset-3" style="margin-bottom:10px;">
+                <button class="btn btn-primary" onclick="window.location='http://127.0.0.1:8000/calendars/uploadsuccess'"> <span class="glyphicon glyphicon-upload" style="margin-right:5px;"></span>Upload </button>
+        </div> 
+    </div>
+</form>-->
+
+<form action="{% url "calendars:upload" %}" method="POST" enctype="multipart/form-data" class="form-horizontal"> {% csrf_token %}
+    <div class="button-wrap">
+        <header> 
+            <h1 style="border: 3px solid #1c4587; padding: 20px;">File Upload:</h1>
+        </header>
+        <div class="wrapper">      
+            <label class="button" for="csv_file">UPLOAD FILE:</label>
+            <input id="csv_file" type="file">
+        </div>  
+    </div>                  
+    <div class="form-group">                    
+        <div class="col-md-3 col-sm-3 col-xs-12 col-md-offset-3" style="margin-bottom:10px;">
+                <button class="btn btn-primary" onclick="window.location='http://127.0.0.1:8000/calendars/uploadsuccess'"> <span class="glyphicon glyphicon-upload" style="margin-right:5px;"></span>Upload </button>
+        </div> 
+    </div>
 </form>
