--- a/projectprepsite/calendars/templates/calendars/uploadfile.html
+++ b/projectprepsite/calendars/templates/calendars/uploadfile.html
@@ -29,6 +29,7 @@
     cursor: pointer;
     transition-duration: 0.4s;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    border-radius: 5px;
   }
   .button {background-color: #a4c2f4ff; border:2px solid #1c4587}
   .button:hover {background-color: rgb(214, 226, 247)}
