added name and formcontrol

--- a/projectprepsite/calendars/templates/calendars/upload.html
+++ b/projectprepsite/calendars/templates/calendars/upload.html
@@ -63,7 +63,7 @@
         </header>
         <div class="wrapper">      
             <label class="button" for="csv_file">UPLOAD FILE:</label>
-            <input id="csv_file" type="file">
+            <input id="csv_file" type="file" name="csv_file" class=""form-control>
         </div>  
     </div>                  
     <div class="form-group">                    
