tried uploading - still need to fix errors

--- a/projectprepsite/calendars/templates/calendars/upload.html
+++ b/projectprepsite/calendars/templates/calendars/upload.html
@@ -62,8 +62,8 @@
             <h1 style="border: 3px solid #1c4587; padding: 20px;">File Upload:</h1>
         </header>
         <div class="wrapper">      
-            <label class="button" for="csv_file">UPLOAD FILE:</label>
-            <input id="csv_file" type="file" name="csv_file" class=""form-control>
+            <label class="button" for="file">UPLOAD FILE:</label>
+            <input id="file" type="file" name="file" class=""form-control>
         </div>  
     </div>                  
     <div class="form-group">                    
