--- a/projectprepsite/calendars/templates/calendars/upload.html
+++ b/projectprepsite/calendars/templates/calendars/upload.html
@@ -34,6 +34,20 @@
         background-color: #a4c2f4ff;
         border-radius: 5px;
     }
+    .button2 {
+        display: inline-block;
+        border: 2px solid #1c4587;
+        color: #4285f4;
+        padding: 11.25px 24px; 
+        text-align: center;
+        font-size: 24px;
+        transition-duration: 0.4s;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        cursor: pointer;
+        background-color: #a4c2f4ff;
+        border-radius: 5px;
+    }
+    .button2:hover {background-color: rgb(214, 226, 247)}
     .button:hover {background-color: rgb(214, 226, 247)}
     .button-wrap {
         position: relative;
@@ -65,10 +79,10 @@
             <label class="button" for="file">UPLOAD FILE:</label>
             <input id="file" type="file" name="file" class=""form-control>
         </div>  
-    </div>                  
-    <div class="form-group">                    
-        <div class="col-md-3 col-sm-3 col-xs-12 col-md-offset-3" style="margin-bottom:10px;">
-                <button class="btn btn-primary" onclick="window.location='http://127.0.0.1:8000/calendars/uploadsuccess'"> <span class="glyphicon glyphicon-upload" style="margin-right:5px;"></span>Upload </button>
-        </div> 
-    </div>
+        <div class="wrapper">
+            <button class="button2" onclick="window.location='http://127.0.0.1:8000/calendars/uploadsuccess'">
+                Next
+            </button>
+        </div>      
+    </div>            
 </form>
