--- a/projectprepsite/calendars/templates/calendars/uploadsuccess.html
+++ b/projectprepsite/calendars/templates/calendars/uploadsuccess.html
@@ -17,6 +17,10 @@
     color: dodgerblue;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
+  div {
+    display: flex;
+    justify-content: right;
+  }
   article {
     background-color: #dce8ff;
     padding: 10px;
@@ -48,6 +52,22 @@
     transition-duration: 0.4s;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
+  .button3 {
+    border: 2px solid #1c4587;
+    color: #4285f4;
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 24px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    border-radius: 5px;
+    background-color: #a4c2f4ff;
+    cursor: pointer;
+  }
+  .button3:hover{background-color: rgb(214, 226, 247)}
+
   .button {background-color: #c9daf8ff; border:2px solid #6d9eeb}
 
 </style>
@@ -65,3 +85,8 @@
 <article>
   <p>Your file has been successfully uploaded!</p>
 </article>
+<section>
+  <div>
+    <button class="button3">NEXT</button>
+  </div>
+</section>
