--- a/projectprepsite/calendars/templates/calendars/uploadsuccess.html
+++ b/projectprepsite/calendars/templates/calendars/uploadsuccess.html
@@ -87,6 +87,6 @@
 </article>
 <section>
   <div>
-    <button class="button3">NEXT</button>
+    <button class="button3" onclick="window.location='http://127.0.0.1:8000/calendars/additionalform'">NEXT</button>
   </div>
 </section>
