changed the form to model forms so that entries can be stored in admin

--- a/projectprepsite/calendars/templates/calendars/additionalform.html
+++ b/projectprepsite/calendars/templates/calendars/additionalform.html
@@ -35,8 +35,8 @@
 
   <div>
     <form method="POST">
-    {{ form.as_p }}
-    {% csrf_token %}
+      {% csrf_token %}
+      {{form}}
     <input type="submit" class="btnbtn-primary" value="submit">
 </form>
 </div>
