--- a/projectprepsite/calendars/templates/calendars/supervisionscheduledisplay.html
+++ b/projectprepsite/calendars/templates/calendars/supervisionscheduledisplay.html
@@ -1,4 +1,4 @@
-
+{% load static %}
 
 <head>
 	<style>
@@ -21,6 +21,12 @@
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 900;
   }
+  body {
+	background-color: #dce8ff
+  }
+  .button {
+	cursor: pointer;
+  }
 	</style>
 </head>
 
@@ -42,8 +48,10 @@
 	<!-- cellspacing is used to specify the
 		space between the cell and its contents -->
 
-	<h2 align="center" style="color: orange;">
-		January 2024
+	<input align="left" type="image" src="{% static 'BlueArrowBig.png' %}" value=""" width="100" height="100">
+
+	<h2 align="center" style="color: black; border: black;">
+		January 2023
 	</h2>
 	<br />
 
@@ -74,55 +82,55 @@
 			<tr>
 				<!-- Here we have applied inline style
 					to make it more attractive-->
-				<th style="color: white; background: purple;">
+				<th style="color: black; background: white; border: black">
 					Mon</th>
-				<th style="color: white; background: purple;">
+				<th style="color: black; background: white;">
 					Tue</th>
-				<th style="color: white; background: purple;">
+				<th style="color: black; background: white;">
 					Wed</th>
-				<th style="color: white; background: purple;">
+				<th style="color: black; background: white;">
 					Thu</th>
-				<th style="color: white; background: purple;">
+				<th style="color: black; background: white;">
 					Fri</th>
 			</tr>
 		</thead>
 
 		<tbody>
 			<tr>
-				<td>1</td>
-				<td>2</td>
-        <td>3</td>
-        <td>4</td>
-        <td>5</td>
+				<td style="color: black; background: #78909cff">2</td>
+				<td style="color: black; background: #78909cff">3</td>
+        		<td style="color: black; background: #78909cff">4</td>
+        		<td style="color: black; background: #78909cff">5</td>
+        		<td style="color: black; background: #78909cff">6</td>
 			</tr>
 			<tr></tr>
 			<tr>
-				<td>8</td>
-				<td>9</td>
-				<td>10</td>
-				<td>11</td>
-				<td>12</td>
+				<td style="color: black; background: #a4c2f4ff">9</td>
+				<td style="color: black; background: #6fa8dcff">10</td>
+				<td style="color: black; background: #3d85c6ff">11</td>
+				<td style="color: white; background: #073763ff">12</td>
+				<td style="color: black; background: #a4c2f4ff">13</td>
 			</tr>
 			<tr>
-				<td>15</td>
-				<td>16</td>
-				<td>17</td>
-				<td>18</td>
-				<td>19</td>
+				<td style="color: black; background: #6fa8dcff">16</td>
+				<td style="color: black; background: #3d85c6ff">17</td>
+				<td style="color: white; background: #073763ff">18</td>
+				<td style="color: black; background: #a4c2f4ff">19</td>
+				<td style="color: black; background: #6fa8dcff">20</td>
 			</tr>
 			<tr>
-				<td>22</td>
-				<td>23</td>
-				<td>24</td>
-				<td>25</td>
-				<td>26</td>
+				<td style="color: black; background: #3d85c6ff">23</td>
+				<td style="color: white; background: #073763ff">24</td>
+				<td style="color: black; background: #a4c2f4ff">25</td>
+				<td style="color: black; background: #6fa8dcff">26</td>
+				<td style="color: black; background: #3d85c6ff">27</td>
 			</tr>
 			<tr>
-				<td>29</td>
-				<td>30</td>
-				<td>31</td>
-				<td>1</td>
-				<td>2</td>
+				<td style="color: white; background: #073763ff">30</td>
+				<td style="color: black; background: #78909cff">31</td>
+				<td></td>
+				<td></td>
+				<td></td>
 			</tr>
 		</tbody>
 	</table>
