--- a/projectprepsite/calendars/templates/calendars/uploadsuccess.html
+++ b/projectprepsite/calendars/templates/calendars/uploadsuccess.html
@@ -80,7 +80,7 @@
 
 <section>
     <h2><b>Add a <u>CSV file</u> which includes the names of all teachers, corresponding prep times, and school locations to supervise</b></h2>
-    <button class="button button1" disabled>UPLOAD</button> 
+    <button class="button button1" disabled>UPLOAD FILE</button> 
 </section>
 <article>
   <p>Your file has been successfully uploaded!</p>
