--- a/projectprepsite/calendars/templates/calendars/upload.html
+++ b/projectprepsite/calendars/templates/calendars/upload.html
@@ -21,6 +21,14 @@
         padding: 15px;
         text-align: center;
     }
+    section {
+    background-color: #dce8ff;
+    padding: 10px;
+    text-align: center;
+    font-size: 20;
+    color: dodgerblue;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
     .button {
         display: inline-block;
         border: 2px solid #1c4587;
@@ -75,6 +83,9 @@
         <header> 
             <h1 style="border: 3px solid #1c4587; padding: 20px;">File Upload:</h1>
         </header>
+        <section>
+            <h2><b>Add a <u>CSV file</u> which includes the names of all teachers, corresponding prep times, and school locations to supervise</b></h2>
+        </section>
         <div class="wrapper">      
             <label class="button" for="file">UPLOAD FILE:</label>
             <input id="file" type="file" name="file" class=""form-control>
