--- a/projectprepsite/calendars/templates/calendars/uploadsuccess.html
+++ b/projectprepsite/calendars/templates/calendars/uploadsuccess.html
@@ -74,7 +74,7 @@
 
 <header>
     <h1 style="border: 3px solid #1c4587; padding: 20px;">
-      Upload Your File
+      File Upload:
     </h1>
   </header>
 
