finished week display and started on day display

--- a/projectprepsite/calendars/templates/calendars/supervisionscheduledisplay.html
+++ b/projectprepsite/calendars/templates/calendars/supervisionscheduledisplay.html
@@ -273,7 +273,7 @@
 			</tr>
 			<tr></tr>
 			<tr>
-				<td style="color: black; background: #a4c2f4ff"><input type="button" value="9" class="button3"></td>
+				<td style="color: black; background: #a4c2f4ff"><input type="button" value="9" class="button3" onclick="window.location='http://127.0.0.1:8000/calendars/daydisplay'"></td>
 				<td style="color: black; background: #6fa8dcff"><input type="button" value="10" class="button3"></td>
 				<td style="color: black; background: #3d85c6ff"><input type="button" value="11" class="button3"></td>
 				<td style="color: white; background: #073763ff"><input type="button" value="12" class="button3"></td>
