--- a/projectprepsite/calendars/templates/calendars/weekdisplay.html
+++ b/projectprepsite/calendars/templates/calendars/weekdisplay.html
@@ -21,6 +21,31 @@
     body {
 	background-color: #dce8ff
   }
+  .day-table {
+    padding: 30px;
+  }
+  .button-absolute {
+    position: absolute;
+    top: 150%;
+    right: 2%;
+  }
+  .button {
+    display: inline-block;
+    border: none;
+    color: #4285f4;
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 24px;
+    margin: 15px 4px;
+    cursor: pointer;
+    transition-duration: 0.4s;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    border-radius: 5px;
+    background-color: #a4c2f4ff; 
+    border:2px solid #1c4587
+  }
+  .button:hover {background-color: rgb(214, 226, 247)}
 </style>
 
 <header>
@@ -28,6 +53,23 @@
       Supervision Schedule
     </h1>
   </header>
+
+<div class="day-table">
+    <table bfgcolor="lightgrey" align="center"
+        cellspacing="21" cellpadding="21">
+        <caption align="top">
+        </caption>
+        <tbody>
+            <tr>
+                <td style="color: black; background: #a4c2f4ff; border: black">Day 1</td>
+                <td style="color: black; background: #6fa8dcff; border: black">Day 2</td>
+                <td style="color: black; background: #3d85c6ff; border: black">Day 3</td>
+                <td style="color: white; background: #073763ff; border: black">Day 4</td>
+            </tr>
+        </tbody>
+    </table>
+</div>  
+  
 
   <body>
     <table bgcolor="lightgrey" align="center"
@@ -52,7 +94,82 @@
         </thead>
         <tbody>
             <tr>
-                <td style="color: black; background-color: #c9daf8ff; font-size: medium;">8:10-9:25</td>
+                <td style="color: black; background-color: #c9daf8ff; font-size: medium;">8:10 - 9:25</td>
+                <td style="color: black; background-color: #c9daf8ff; font-size: small;">Adams (Foyer) and Pierson (Library)</td>
+                <td style="color: black; background-color: #c9daf8ff; font-size: small;">Herfst (Foyer) and
+                     Quast (Library)
+                    </td>
+                <td style="color: black; background-color: #c9daf8ff; font-size: small;">Brunet (Foyer) and
+                     Belzile (Library)
+                    </td>
+                <td style="color: black; background-color: #c9daf8ff; font-size: small;">Jones
+                    (Foyer) and
+                     Pierson
+                    (Library)
+                    </td>
+                <td style="color: black; background-color: #c9daf8ff; font-size: small;">Adams (Foyer) and
+                     Pierson
+                    (Library)
+                    </td>
+            </tr>
+            <tr>
+                <td style="color: black; background-color: #c9daf8ff; font-size: medium;">9:35 - 10:50</td>
+                <td style="color: black; background-color: #c9daf8ff; font-size: small;">Holock (Library) and Rafuse (Foyer)</td>
+                <td style="color: black; background-color: #c9daf8ff; font-size: small;">Edwards (Library)
+                    </td>
+                <td style="color: black; background-color: #c9daf8ff; font-size: small;">Dawson (Foyer) and
+                     Cleveland (Library)
+                    </td>
+                <td style="color: black; background-color: #c9daf8ff; font-size: small;">Brunet
+                    (Foyer) and
+                     Belzile
+                    (Library)
+                    </td>
+                <td style="color: black; background-color: #c9daf8ff; font-size: small;">Rafuse (Foyer) and
+                     Holock
+                    (Library)
+                    </td>
+            </tr>
+            <tr>
+                <td style="color: black; background-color: #c9daf8ff; font-size: medium;">10:50 - 11:40</td>
+                <td style="color: black; background-color: #c9daf8ff; font-size: small;">Parsons (Cafetorium) and Quast (Foyer)</td>
+                <td style="color: black; background-color: #c9daf8ff; font-size: small;">Herfst (Foyer) and
+                     Quast (Library)
+                    </td>
+                <td style="color: black; background-color: #c9daf8ff; font-size: small;">Hastings (Foyer) and
+                     Sadaphal (Cafetorium)
+                    </td>
+                <td style="color: black; background-color: #c9daf8ff; font-size: small;">Jones
+                    (Foyer) and
+                     Pierson
+                    (Library)
+                    </td>
+                <td style="color: black; background-color: #c9daf8ff; font-size: small;">Adams (Foyer) and
+                     Pierson
+                    (Library)
+                    </td>
+            </tr>
+            <tr>
+                <td style="color: black; background-color: #c9daf8ff; font-size: medium;">11:40 - 12:55</td>
+                <td style="color: black; background-color: #c9daf8ff; font-size: small;">Adams (Foyer) and Pierson (Library)</td>
+                <td style="color: black; background-color: #c9daf8ff; font-size: small;">Herfst (Foyer) and
+                     Quast (Library)
+                    </td>
+                <td style="color: black; background-color: #c9daf8ff; font-size: small;">Brunet (Foyer) and
+                     Belzile (Library)
+                    </td>
+                <td style="color: black; background-color: #c9daf8ff; font-size: small;">Jones
+                    (Foyer) and
+                     Pierson
+                    (Library)
+                    </td>
+                <td style="color: black; background-color: #c9daf8ff; font-size: small;">Adams (Foyer) and
+                     Pierson
+                    (Library)
+                    </td>
+            </tr>
+            <tr>
+                <td style="color: black; background-color: #c9daf8ff; font-size: medium;">1:05 - 2:20</td>
                 <td style="color: black; background-color: #c9daf8ff; font-size: small;">Adams (Foyer) and Pierson (Library)</td>
                 <td style="color: black; background-color: #c9daf8ff; font-size: small;">Herfst (Foyer) and
                      Quast (Library)
@@ -71,8 +188,11 @@
                     </td>
             </tr>
         </tbody>
-
-
     </table>
+
+    <div class="button-absolute">
+        <input type="button" class="button" value="BACK" onclick="window.location='http://127.0.0.1:8000/calendars/supervisionscheduledisplay'">
+    </div>
+    
 
   </body>
