added docstrings to code

--- a/projectprepsite/calendars/templates/calendars/additionalform.html
+++ b/projectprepsite/calendars/templates/calendars/additionalform.html
@@ -1,3 +1,8 @@
+<!-- 
+  File Name: additionalform.html
+  File Creation Date: April 18, 2023
+  Description: Creates a form in which users can input their semester type, start date, end date, and school board.
+-->
 <style>
     header {
         background-color: #dce8ff;
