--- a/projectprepsite/calendars/templates/calendars/daydisplay.html
+++ b/projectprepsite/calendars/templates/calendars/daydisplay.html
@@ -1,3 +1,8 @@
+<!-- 
+  File Name: daydisplay.html
+  File Creation Date: May 19, 2023
+  Description: Creates a display for individual days, which also includes time frame and teachers supervising.
+-->
 <style>
     table {
 			border-collapse: collapse;
