--- a/projectprepsite/calendars/templates/calendars/supervisionscheduledisplay.html
+++ b/projectprepsite/calendars/templates/calendars/supervisionscheduledisplay.html
@@ -1,3 +1,9 @@
+<!-- 
+  File Name: supervisionscheduledisplay.html
+  File Creation Date: May 16, 2023
+  Description: Creates a calendar-based schedule that has buttons for each day and a button to view the specific week.
+-->
+
 {% load static %}
 
 <head>
