--- a/projectprepsite/calendars/templates/calendars/titlepage.html
+++ b/projectprepsite/calendars/templates/calendars/titlepage.html
@@ -1,3 +1,9 @@
+<!-- 
+  File Name: titlepage.html
+  File Creation Date: February 13, 2023
+  Description: Creates a title page that introduces our program and includes a button in which users can click to start the program.
+-->
+
 <style>
   header {
     background-color: #dce8ff;
