--- a/projectprepsite/calendars/templates/calendars/upload.html
+++ b/projectprepsite/calendars/templates/calendars/upload.html
@@ -1,3 +1,9 @@
+<!-- 
+  File Name: upload.html
+  File Creation Date: February 27, 2023
+  Description: Creates an upload page that allows users to go into their directories and upload a file.
+-->
+
 <style>
     header {
         background-color: #dce8ff;
