--- a/projectprepsite/calendars/templates/calendars/uploadfile.html
+++ b/projectprepsite/calendars/templates/calendars/uploadfile.html
@@ -1,3 +1,9 @@
+<!-- 
+  File Name: uploadfile.html
+  File Creation Date: Febrruary 27, 2023
+  Description: Creates a page where users are instructed to upload a file with a button that navigates them to upload.html.
+-->
+
 <style>
     header {
         background-color: #dce8ff;
