--- a/projectprepsite/calendars/templates/calendars/uploadsuccess.html
+++ b/projectprepsite/calendars/templates/calendars/uploadsuccess.html
@@ -1,3 +1,9 @@
+<!-- 
+  File Name: uploadsuccess.html
+  File Creation Date: April 3, 2023
+  Description: Created an page that informs the user that the file has been uploaded successfully.
+-->
+
 <style>
     header {
         background-color: #dce8ff;
