--- a/projectprepsite/calendars/templates/calendars/weekdisplay.html
+++ b/projectprepsite/calendars/templates/calendars/weekdisplay.html
@@ -1,3 +1,9 @@
+<!-- 
+  File Name: weekdisplay.html
+  File Creation Date: May 18, 2023
+  Description: Creates a display that allows user to see the entire week with the time frame and the teachers who are assigned.
+-->
+
 <style>
     table {
 			border-collapse: collapse;
