edited day display

--- a/projectprepsite/calendars/templates/calendars/daydisplay.html
+++ b/projectprepsite/calendars/templates/calendars/daydisplay.html
@@ -38,13 +38,13 @@
   }
   .button2-absolute {
     position: absolute;
-    top: 70%;
+    top: 75%;
     right: 20%;
   }
   .button3-absolute {
     position: absolute;
-    top: 80%;
-    right: 20%;
+    top: 90%;
+    right: 19.5%;
   }
   .button {
     display: inline-block;
@@ -80,7 +80,7 @@
   </div>
 
   <div class="button3-absolute">
-    <input type="button" class="button" value="BACK">
+    <input type="button" class="button" value="BACK" onclick="window.location='http://127.0.0.1:8000/calendars/supervisionscheduledisplay'">
   </div>
 
   <body>
