--- a/projectprepsite/calendars/templates/calendars/upload.html
+++ b/projectprepsite/calendars/templates/calendars/upload.html
@@ -94,7 +94,7 @@
         </section>
         <div class="wrapper">      
             <label class="button" for="file">UPLOAD FILE:</label>
-            <input id="file" type="file" name="file" class=""form-control>
+            <input id="file" type="file" name="file" class="form-control">
         </div>  
         <div class="wrapper">
             <button class="button2" onclick="window.location='http://127.0.0.1:8000/calendars/uploadsuccess'">
