--- a/projectprepsite/calendars/templates/calendars/daydisplay.html
+++ b/projectprepsite/calendars/templates/calendars/daydisplay.html
@@ -1,6 +1,9 @@
 <!-- 
   File Name: daydisplay.html
+  Version 1.0
   File Creation Date: May 19, 2023
+  Last Updated: June 1, 2023
+  Authors: Eddy Wang
   Description: Creates a display for individual days, which also includes time frame and teachers supervising.
 -->
 <style>
