--- a/projectprepsite/calendars/templates/calendars/supervisionscheduledisplay.html
+++ b/projectprepsite/calendars/templates/calendars/supervisionscheduledisplay.html
@@ -1,6 +1,9 @@
 <!-- 
   File Name: supervisionscheduledisplay.html
+  Version 1.0
   File Creation Date: May 16, 2023
+  Last Updated: June 1, 2023
+  Authors: Eddy Wang
   Description: Creates a calendar-based schedule that has buttons for each day and a button to view the specific week.
 -->
 
