--- a/projectprepsite/calendars/templates/calendars/titlepage.html
+++ b/projectprepsite/calendars/templates/calendars/titlepage.html
@@ -1,6 +1,9 @@
 <!-- 
   File Name: titlepage.html
+  Version 1.0
   File Creation Date: February 13, 2023
+  Last Updated: June 1, 2023
+  Authors: Khadeeja Rizwan and Eddy Wang
   Description: Creates a title page that introduces our program and includes a button in which users can click to start the program.
 -->
 
