--- a/projectprepsite/calendars/templates/calendars/upload.html
+++ b/projectprepsite/calendars/templates/calendars/upload.html
@@ -1,6 +1,9 @@
 <!-- 
   File Name: upload.html
+  Version 1.0
   File Creation Date: February 27, 2023
+  Last Updated: June 1, 2023
+  Authors: Khadeeja Rizwan and Eddy Wang
   Description: Creates an upload page that allows users to go into their directories and upload a file.
 -->
 
