--- a/projectprepsite/calendars/templates/calendars/uploadfile.html
+++ b/projectprepsite/calendars/templates/calendars/uploadfile.html
@@ -1,6 +1,9 @@
 <!-- 
   File Name: uploadfile.html
-  File Creation Date: Febrruary 27, 2023
+  Version 1.0
+  File Creation Date: February 27, 2023
+  Last Updated: June 1, 2023
+  Authors: Khadeeja Rizwan and Eddy Wang
   Description: Creates a page where users are instructed to upload a file with a button that navigates them to upload.html.
 -->
 
