--- a/projectprepsite/calendars/templates/calendars/uploadsuccess.html
+++ b/projectprepsite/calendars/templates/calendars/uploadsuccess.html
@@ -1,6 +1,9 @@
 <!-- 
   File Name: uploadsuccess.html
+  Version 1.0
   File Creation Date: April 3, 2023
+  Last Updated: June 1, 2023
+  Authors: Eddy Wang
   Description: Created an page that informs the user that the file has been uploaded successfully.
 -->
 
