--- a/projectprepsite/calendars/templates/calendars/weekdisplay.html
+++ b/projectprepsite/calendars/templates/calendars/weekdisplay.html
@@ -1,6 +1,9 @@
 <!-- 
   File Name: weekdisplay.html
+  Version 1.0
   File Creation Date: May 18, 2023
+  Last Updated: June 1, 2023
+  Authors: Eddy Wang
   Description: Creates a display that allows user to see the entire week with the time frame and the teachers who are assigned.
 -->
 
