--- a/projectprepsite/calendars/templates/calendars/additionalform.html
+++ b/projectprepsite/calendars/templates/calendars/additionalform.html
@@ -1,6 +1,9 @@
 <!-- 
   File Name: additionalform.html
+  Version 1.0
   File Creation Date: April 18, 2023
+  Last Updated: June 1, 2023
+  Authors: Eddy Wang
   Description: Creates a form in which users can input their semester type, start date, end date, and school board.
 -->
 <style>
